alert, confirm, prompt

--- a/intro/index.html
+++ b/intro/index.html
@@ -12,8 +12,8 @@
 
 
 <!-- Internal Script -->
-    <script>
-        "use strict";
+    <!-- <script>
+        // "use strict";
         // Javascript is always written in the body just after the completion of the html code
         num2= 56; // error- no variable used or variable not defined;
         var a=10; //number
@@ -28,10 +28,10 @@
         console.log(typeof(b));
         console.log(c);
         console.log(typeof(c));
-    </script>
+    </script> -->
 
 // External Scripting
-    <script src="/data.js">
-    </script>
+    <!-- <script src="/intro/data.js"></script> -->
+    <script src="/intro/letVARconst.js"></script>
 </body>
 </html>
