--- a/BOM/index.html
+++ b/BOM/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Browser Object Model</h1>
-    
+    <!-- <h1>Browser Object Model</h1> -->
+    <!-- 7/12/24---if else -->
+     <h1>if else</h1>
 
 
     <script src="/BOM/BOM.js"></script>
