--- a/intro/index.html
+++ b/intro/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Harshal</h1>
+    <h1>Variable Declaration</h1>
+    <h2>Data-Types</h2>
     
 
 
@@ -31,7 +32,6 @@
     </script> -->
 
 // External Scripting
-    <!-- <script src="/intro/data.js"></script> -->
     <script src="/intro/letVARconst.js"></script>
 </body>
 </html>
