--- a/If-ElseTernary/index.html
+++ b/If-ElseTernary/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>If Else and Ternary Operator</h1>
+
+    <script src="/If-ElseTernary/questions.js"></script>
     
 </body>
 </html>
