--- a/If-ElseTernary/index.html
+++ b/If-ElseTernary/index.html
@@ -8,6 +8,18 @@
 <body>
     <h1>If Else and Ternary Operator</h1>
 
+    <!-- Inline Event Listener -->
+    <button onclick="Q1()">Vote Eligibility</button><br>
+    <button onclick="Q2()">Completed or Not</button><br>
+    <button onclick="Q3()">Product Price</button><br>
+    <button onclick="Q4()">Result(pass/fail)</button><br>
+    <button onclick="Q5()">Even/Odd</button><br>
+    <button onclick="Q6()">Delete Confirmation</button><br>
+    <button onclick="Q7()">Positive/Negative</button><br>
+    <button onclick="Q8()">1-10 Print numbers</button><br>
+    <button onclick="Q9()">print num greater then 10</button><br>
+    <button onclick="Q10()">Week's day</button>
+
     <script src="/If-ElseTernary/questions.js"></script>
     
 </body>
