--- a/array/index.html
+++ b/array/index.html
@@ -6,12 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Array and its Method</h1>
 
-    <h1>String</h1>
-
-
-    <button onclick="button()">Click Here</button>
-    <script src="/String/string.js"></script>
-    
+    <script src="./array.js"></script>
 </body>
 </html>
