--- a/DOM/index.html
+++ b/DOM/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <h1>Document object model</h1><br>
+    <h1>Document object model</h1><br>
     <h4>1. onclick,<br>
         2. ondoubleclick,<br> 
         3. onmouseenter,<br> 
@@ -21,7 +21,7 @@
     <button onclick="red()">red</button>
         <button onclick="green()">green</button>
         <button onclick="yellow()">yellow</button>
-        <button onclick="blue()">blue</button> -->
+        <button onclick="blue()">blue</button>
 
         <div id="main" style="height: 100%; width: 100%;"><img src="./1.webp" alt=""></div>
         <div>
