--- a/DOM/pureJS/pure.html
+++ b/DOM/pureJS/pure.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Pure JavaScript</h1>
+    <br><br>
+
+
+    <input type="text" id="inp" placeholder="Name">
+    <p id="p"></p>
+    <br><br>
+
+    <input type="number" id="inp2" placeholder="Number">
+    <button id="btn">Submit</button>
+    <h1 id="num"></h1>
 
     
 
