Calculator by js

--- a/DOM/24.2.24/index.html
+++ b/DOM/24.2.24/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./new.css">
+
 </head>
 <body>
     <h1>24/12/24</h1>
+    <h2>Form</h2>
+
+<form action="#" align="center">
+    <p id="ename"></p>
+    Enter your Name:
+    <br><input type="text" id="name">
+    <br><br>
+    <p id="enumm"></p>
+    Enter Mobile Number:
+    <br><input type="text" id="numm">
+    <br><br>
+    <p id="eemail"></p>
+    Enter your Email:
+    <br><input type="text" id="email">
+    <br><br>
+    <p id="epass"></p>
+    Enter Password:
+    <br><input type="text" id="pass">
+    <br><br>
+    <p id="ecpass"></p>
+    Confirm Password:
+    <br><input type="text" id="cpass">
+    <br><br>
+
+    <input type="submit" value="login" onclick="return submit1()" id="login">
+</form>
 
     <script src="./new.js"></script>
 </body>
