--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -50,6 +50,7 @@
 
         <tr>
             <td id="operator" onclick="sq('^2')">x^2</td>
+            <td id="operator" onclick="age()">Age</td>
         </tr>
     </table>
     
