--- a/DB JSON/hw/index.html
+++ b/DB JSON/hw/index.html
@@ -5,13 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+
+</style>
 <body onload="getdata()">
 
     <h1>Data Of Car Renter</h1>
 
-    <div id="displayy">
+    <table border="1" cellspacing="auto">
+        <thead>
+            <tr>
+                <th>Renter Name</th>
+                <th>car rented</th>
+                <th>aadhar number</th>
+                <th>car registered num</th>
+                <th>address</th>
+                <th>mobile</th>
+                <th>Cancel</th>
+            </tr>
+        </thead>
+        <tbody id="tablee">
 
-    </div>
+        </tbody>
+        
+    </table>
 
     
 
