Animation and json updates

--- a/animation/index.html
+++ b/animation/index.html
@@ -3,19 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./data.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+
     <title>Document</title>
 </head>
+<style>
+    #vanta{
+        height: 100%;
+        width: 100%;
+    }
+</style>
 <body>
-    <h1 data-aos="flip-up" data-aos-duration="3500">AOS library</h1>
+
 
     
+    <div id="vantaa">
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    </div>
+   
+   
+   
+    <!-- <h1 data-aos="flip-up" data-aos-duration="3500">AOS library</h1>
+   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
-      </script>
-    <script src="./data.js"></script>
+      </script> -->
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+
+
+      <script src="./data.js"></script>
 </body>
 </html>
